--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         }
         #settingsCog {
         position: absolute;
-        top: 10px; /* Adjust as needed */
-        right: 10px; /* Adjust as needed */
+        top: 10px;
+        right: 10px;
         cursor: pointer;
-        font-size: 24px; /* Adjust size as needed */
+        font-size: 24px;
         }
         #settingsPanel {
             position: absolute;
             top: 0;
             right: 0;
-            width: 100%; /* Full width */
-            height: 100%; /* Full height */
+            width: 100%;
+            height: 100%;
             background: rgba(255, 255, 255, 0.95);
-            z-index: 3; /* Ensure it's above the cog icon and the rest of chatSection */
+            z-index: 3; 
             padding: 20px;
         }
 
@@ -47,7 +47,6 @@
             margin-bottom: 20px;
         }
 
-        /* This will position the Back button on the top right */
         #settingsPanel button {
             position: absolute;
             top: 10px;
@@ -55,7 +54,7 @@
         }
         .message {
             position: relative;
-            padding-right: 120px; /* Adjust as needed based on timestamp width */
+            padding-right: 120px;
         }
 
         .timestamp {
